--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
           <li><a href="pageProfil.html">Profile</a></li>
         </ul>
       </div>
+      <button class="menuBurger">lll</button>
     </nav>
+
     <main>
       <div class="imgBackAcceuil"></div>
       <div id="descriptionAcceuil">
