--- a/pageLink.html
+++ b/pageLink.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Link</title>
     <link rel="stylesheet" href="style.css" />
     <script src="index.js" defer></script>
-</head>
-<body>
+    <script src="affichage.js" defer></script>
+  </head>
+  <body>
     <header></header>
 
     <nav class="navbar">
@@ -20,10 +21,18 @@
           <li><a href="pageProfil.html">Profile</a></li>
         </ul>
       </div>
+      <button class="menuBurger">lll</button>
+
     </nav>
-    <div id="container">
-    </div>
-    <button id="addPlayer" onclick=maFonction()>✚</button>
-    
-</body>
+    <!-- <div class="menu">
+      <ul>
+        <li><a href="pageAcceuil.html">Home</a></li>
+        <li><a href="pageLink.html">Link</a></li>
+        <li><a href="pageContact.html">Contact</a></li>
+        <li><a href="pageProfil.html">Profile</a></li>
+      </ul>
+    </div> -->
+    <div id="container"></div>
+    <a href="pageProfil.html" id="linkAdd"><button id="addPlayer" class="buttonStyle">✚</button></a>
+  </body>
 </html>
