--- a/pageAcceuil.html
+++ b/pageAcceuil.html
@@ -6,7 +6,6 @@
     <title>Home</title>
     <link rel="stylesheet" href="style.css" />
     <script src="index.js" defer></script>
-    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     <header id="headerAcceuil"></header>
@@ -21,6 +20,7 @@
           <li><a href="pageProfil.html">Profile</a></li>
         </ul>
       </div>
+      <button class="menuBurger">lll</button>
     </nav>
     <main>
         <div id="nouveaute">
