--- a/pageLink.html
+++ b/pageLink.html
@@ -21,7 +21,7 @@
           <li><a href="pageProfil.html">Profile</a></li>
         </ul>
       </div>
-      <button class="menuBurger">lll</button>
+      <svg class="menuBurger" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z"/></svg>
 
     </nav>
     <!-- <div class="menu">
@@ -32,7 +32,10 @@
         <li><a href="pageProfil.html">Profile</a></li>
       </ul>
     </div> -->
+    <div id="containerStyle">
     <div id="container"></div>
+  </div>
     <a href="pageProfil.html" id="linkAdd"><button id="addPlayer" class="buttonStyle">✚</button></a>
+    <button id="delete">delete</button>
   </body>
 </html>
