--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,15 +8,16 @@
     <script src="index.js" defer></script>
   </head>
   <body>
-    <header>
-      <img src="images/logoUE1.png" alt="" id="logo" />
-      <div id="siteName">Kootlinf</div>
-    </header>
+    <header></header>
 
     <nav class="navbar">
+      <div id="logoName">
+        <img src="images/logoUE1.png" alt="" id="logo" />
+        <a href="index.html" id="siteName">Kootlinf</a>
+      </div>
       <div id="sideNav" class="lien">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="acceuil.html">Home</a></li>
           <li><a href="pageLink.html">Link</a></li>
           <li><a href="pageContact.html">Contact</a></li>
           <li><a href="pageProfil.html">Profile</a></li>
