--- a/html/pageLink.html
+++ b/html/pageLink.html
@@ -9,15 +9,16 @@
     <script src="affichage.js" defer></script>
   </head>
   <body>
-    <header>
-      <img src="images/logoUE1.png" alt="" id="logo" />
-      <div id="siteName">Kootlinf</div>
-    </header>
+    <header></header>
 
     <nav class="navbar">
+      <div id="logoName">
+        <img src="images/logoUE1.png" alt="" id="logo" />
+        <a href="index.html" id="siteName">Kootlinf</a>
+      </div>
       <div id="sideNav" class="lien">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="acceuil.html">Home</a></li>
           <li><a href="pageLink.html">Link</a></li>
           <li><a href="pageContact.html">Contact</a></li>
           <li><a href="pageProfil.html">Profile</a></li>
@@ -31,12 +32,14 @@
         </span>
       </a>
     </nav>
+    <main>
     <div id="containerStyle">
       <div id="container"></div>
     </div>
     <a href="pageProfil.html" id="linkAdd"
       ><button id="addPlayer" class="buttonStyle">✚</button></a
     >
+  </main>
     <footer>
       <a href="mentionsLegales.html" target="_blank">Mentions légales</a>
     </footer>
