--- a/html/pageProfil.html
+++ b/html/pageProfil.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profile</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../css/temp.css" />
     <script src="index.js" defer></script>
     <script src="profile.js" defer></script>
   </head>
